5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1592_2425.log
== TEST (2019-04-01 21:22:17) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = float(d / c)
print(round(cm"km/l", 3))
-- ERROR:
File "XXXX", line 4
    print(round(cm"km/l", 3))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:22:30) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = float(d / c)
print(round(cmkm/l, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cmkm/l, 3))
NameError: name 'cmkm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:23:20) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = float(d / c)
print(round(cm, 3) km/l)
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3) km/l)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:23:37) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = float(d / c)
print(round(cm, 3) "km/l")
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3) "km/l")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:24:19) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = float(d / c)
print(round(cm, 3)) km/l
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)) km/l
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:24:45) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = float(d / c)
print(round(cm, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:24:46) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = float(d / c)
print(round(cm, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:25:21) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = float(d / c)
print(round(cm, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:25:23) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = float(d / c)
print(round(cm, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:25:23) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = float(d / c)
print(round(cm, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:25:23) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = float(d / c)
print(round(cm, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:26:16) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = (d / c)
print(round(cm, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:29:05) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = (d / c)
print(round(cm, 3))print("km/l")
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3))print("km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:30:33) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = (d / c)
print(round(cm, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:30:55) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = (d / c)
print(round(cm, 3))
-- EXECUTION TIME:
0.195955
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:31:37) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = (d / c)
f = km/l
print(round(cm, 3) f )
-- ERROR:
File "XXXX", line 5
    print(round(cm, 3) f )
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:32:49) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = (d / c)
print(round(cm, 3)km/l )
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)km/l )
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:32:51) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = (d / c)
print(round(cm, 3)km/l )
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)km/l )
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:32:51) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = (d / c)
print(round(cm, 3)km/l )
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)km/l )
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:32:52) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = (d / c)
print(round(cm, 3)km/l )
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)km/l )
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:33:07) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = (d / c)
print(round(cm, 3)"km/l" )
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)"km/l" )
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:33:35) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = (d / c)
print("round(cm, 3)km/l")
-- OUTPUT:
round(cm, 3)km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:34:02) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel:"))
cm = (d / c)
print("round(cm, 3)km/l")
-- EXECUTION TIME:
0.195335
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
round(cm, 3)km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
round(cm, 3)km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
round(cm, 3)km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:34:54) 
-- CODE:
d = float(500.0)
c = float(35.0)
cm = (d / c)
print("round(cm, 3)km/l")
-- OUTPUT:
round(cm, 3)km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:34:57) 
-- CODE:
d = float(500.0)
c = float(35.0)
cm = (d / c)
print("round(cm, 3)km/l")
-- OUTPUT:
round(cm, 3)km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:35:18) 
-- CODE:
d = float(500.0)
c = float(35.0)
cm = (d / c)
print(round(cm, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:36:11) 
-- CODE:
d = float(500.0)
c = float(35.0)
cm = (d / c)
print(round(cm, 3)print("km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)print("km/l"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:36:40) 
-- CODE:
d = float(500.0)
c = float(35.0)
cm = (d / c)
print(round(cm, 3)km/l)
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)km/l)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:36:42) 
-- CODE:
d = float(500.0)
c = float(35.0)
cm = (d / c)
print(round(cm, 3)km/l)
-- EXECUTION TIME:
0.195969
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    print(round(cm, 3)km/l)
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 20:18:26) 
-- CODE:
d = float(input(" a "))
c = float(input("b "))
cm = (d / c)
print(round(cm, 3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-23 20:18:43) 
-- CODE:
d = float(input(" a "))
c = float(input("b "))
cm = (d / c)
print(round(cm, 3),"km/l")
-- EXECUTION TIME:
0.864143
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
